--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -135,6 +135,16 @@
       </dependency>
 
       <dependency>
+         <groupId>org.jboss.classfilewriter</groupId>
+         <artifactId>jboss-classfilewriter</artifactId>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.invocation</groupId>
+         <artifactId>jboss-invocation</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-ext</artifactId>
       </dependency>
