--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -89,7 +89,8 @@
       <contiperf.version>1.06</contiperf.version>
       <jboss.ejb3.ext-api.version>1.1.1</jboss.ejb3.ext-api.version>
       <javax.jms.version>1.1</javax.jms.version>
-
+      <classfilewriter.version>1.0.0-SNAPSHOT</classfilewriter.version>
+      <jboss-invocation.version>1.0.0.Beta2-SNAPSHOT</jboss-invocation.version>
       <jbossas.server.manager.version>1.0.3.GA</jbossas.server.manager.version>
       <jbossas.client.version>6.0.0.20100721-M4</jbossas.client.version>
 
@@ -158,7 +159,7 @@
             <artifactId>arquillian-junit</artifactId>
             <version>${arquillian.version}</version>
          </dependency>
-	
+
          <dependency>
             <groupId>org.jboss.weld.arquillian.container</groupId>
             <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
@@ -176,7 +177,7 @@
             <artifactId>arquillian-jbossas-remote-6</artifactId>
             <version>${arquillian.version}</version>
          </dependency>
-         
+
          <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
             <artifactId>arquillian-tomcat-embedded-6</artifactId>
@@ -211,6 +212,18 @@
             <groupId>org.jboss.as</groupId>
             <artifactId>jboss-as-arquillian-container-remote</artifactId>
             <version>${jbossas7.version}</version>
+         </dependency>
+
+         <dependency>
+            <groupId>org.jboss.classfilewriter</groupId>
+            <artifactId>jboss-classfilewriter</artifactId>
+            <version>${classfilewriter.version}</version>
+         </dependency>
+
+         <dependency>
+            <groupId>org.jboss.invocation</groupId>
+            <artifactId>jboss-invocation</artifactId>
+            <version>${jboss-invocation.version}</version>
          </dependency>
 
          <dependency>
