--- a/tests-arquillian/pom.xml
+++ b/tests-arquillian/pom.xml
@@ -197,6 +197,7 @@
                   http://old.nabble.com/Maven-Surefire-and-newer-junit-features-td28539796.html
                -->
                <parallel>none</parallel>
+               <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
             </configuration>
          </plugin>
       </plugins>
