--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -106,6 +106,11 @@
       </dependency>
 
       <dependency>
+         <groupId>org.jboss.classfilewriter</groupId>
+         <artifactId>jboss-classfilewriter</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>org.jboss.spec.javax.interceptor</groupId>
          <artifactId>jboss-interceptors-api_1.1_spec</artifactId>
       </dependency>
