--- a/jbossas7-tck-runner/pom.xml
+++ b/jbossas7-tck-runner/pom.xml
@@ -23,6 +23,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>com.sun.facelets</groupId>
+         <artifactId>jsf-facelets</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>javax.enterprise</groupId>
          <artifactId>cdi-api</artifactId>
       </dependency>
@@ -48,12 +53,6 @@
          <groupId>org.jboss.har2arq</groupId>
          <artifactId>har2arq</artifactId>
          <version>1.0.0-SNAPSHOT</version>
-      </dependency>
-
-      <dependency>
-         <groupId>org.jboss.as</groupId>
-         <artifactId>jboss-as-arquillian-container-managed</artifactId>
-         <scope>test</scope>
       </dependency>
 
       <dependency>
@@ -133,6 +132,20 @@
                      <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
                   </configuration>
                </execution>
+                <execution>
+                  <id>copy-facelets-dependencies</id>
+                  <phase>process-resources</phase>
+                  <goals>
+                     <goal>copy-dependencies</goal>
+                  </goals>
+                  <configuration>
+                     <includeGroupIds>com.sun.facelets</includeGroupIds>
+                     <includeArtifactIds>jsf-facelets</includeArtifactIds>
+                     <stripVersion>true</stripVersion>
+                     <overWriteReleases>true</overWriteReleases>
+                     <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
+                  </configuration>
+               </execution>
             </executions>
          </plugin>
          <plugin>
@@ -142,7 +155,7 @@
                <suiteXmlFiles>
                   <suiteXmlFile>src/test/resources/tck-tests.xml</suiteXmlFile>
                </suiteXmlFiles>
-               <argLine>-Xmx256m</argLine>
+               <argLine>-Xmx512m</argLine>
                <forkMode>once</forkMode>
             </configuration>
          </plugin>
@@ -263,6 +276,13 @@
                <name>incontainer</name>
             </property>
          </activation>
+          <dependencies>
+              <dependency>
+                 <groupId>org.jboss.as</groupId>
+                 <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                 <scope>test</scope>
+              </dependency>
+          </dependencies>
          <build>
             <plugins>
                <plugin>
@@ -308,6 +328,76 @@
                         <property>
                            <name>org.jboss.har2arq.container</name>
                            <value>org.jboss.as.arquillian.container.managed.JBossAsManagedContainer</value>
+                        </property>
+                        <property>
+                           <name>jboss.options</name>
+                           <value>-Xmx2048m -XX:MaxPermSize=512m -enableassertions -Djboss.modules.system.pkgs=com.yourkit</value>
+                        </property>
+                     </systemProperties>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+      <profile>
+         <id>incontainer-remote</id>
+         <activation>
+            <property>
+               <name>incontainer-remote</name>
+            </property>
+         </activation>
+          <dependencies>
+              <dependency>
+                 <groupId>org.jboss.as</groupId>
+                 <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                 <scope>test</scope>
+              </dependency>
+          </dependencies>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>
+                     <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/tck-tests.xml</suiteXmlFile>
+                     </suiteXmlFiles>
+                     <systemProperties>
+                        <property>
+                           <name>java.io.tmpdir</name>
+                           <value>${project.build.outputDirectory}</value>
+                        </property>
+                        <property>
+                           <name>org.jboss.testharness.standalone</name>
+                           <value>false</value>
+                        </property>
+                        <property>
+                           <name>org.jboss.testharness.container.extraConfigurationDir</name>
+                           <value>../jboss-as</value>
+                        </property>
+                        <property>
+                           <name>org.jboss.testharness.container.forceRestart</name>
+                           <value>true</value>
+                        </property>
+                        <property>
+                           <name>org.jboss.testharness.runIntegrationTests</name>
+                           <value>true</value>
+                        </property>
+                        <property>
+                           <name>org.jboss.testharness.libraryDirectory</name>
+                           <value>target/dependency/lib</value>
+                        </property>
+                        <property>
+                           <name>org.jboss.testharness.outputDirectory</name>
+                           <value>target</value>
+                        </property>
+                        <property>
+                           <name>org.jboss.testharness.spi.Containers</name>
+                           <value>org.jboss.har2arq.containers.ArquillianContainerAdaptor</value>
+                        </property>
+                        <property>
+                           <name>org.jboss.har2arq.container</name>
+                           <value>org.jboss.as.arquillian.container.remote.JBossAsRemoteContainer</value>
                         </property>
                         <property>
                            <name>jboss.options</name>
