--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -158,7 +158,7 @@
             <artifactId>arquillian-junit</artifactId>
             <version>${arquillian.version}</version>
          </dependency>
-	
+
          <dependency>
             <groupId>org.jboss.weld.arquillian.container</groupId>
             <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
@@ -176,7 +176,7 @@
             <artifactId>arquillian-jbossas-remote-6</artifactId>
             <version>${arquillian.version}</version>
          </dependency>
-         
+
          <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
             <artifactId>arquillian-tomcat-embedded-6</artifactId>
@@ -314,6 +314,12 @@
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
             <version>1.1</version>
+         </dependency>
+
+         <dependency>
+            <groupId>com.sun.facelets</groupId>
+            <artifactId>jsf-facelets</artifactId>
+            <version>1.1.14</version>
          </dependency>
 
       </dependencies>
