--- a/jbossas7-tck-runner/pom.xml
+++ b/jbossas7-tck-runner/pom.xml
@@ -104,6 +104,20 @@
                      <overWriteReleases>true</overWriteReleases>
                   </configuration>
                </execution>
+                <execution>
+                  <id>copy-tck-api-dependencies</id>
+                  <phase>process-resources</phase>
+                  <goals>
+                     <goal>copy-dependencies</goal>
+                  </goals>
+                  <configuration>
+                     <includeGroupIds>org.jboss.jsr299.tck</includeGroupIds>
+                     <includeArtifactIds>jsr299-tck-api</includeArtifactIds>
+                     <stripVersion>true</stripVersion>
+                     <overWriteReleases>true</overWriteReleases>
+                     <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
+                  </configuration>
+               </execution>
                <execution>
                   <id>copy-weld-dependencies</id>
                   <phase>process-resources</phase>
@@ -331,7 +345,7 @@
                         </property>
                         <property>
                            <name>jboss.options</name>
-                           <value>-Xmx2048m -XX:MaxPermSize=512m -enableassertions -Djboss.modules.system.pkgs=com.yourkit</value>
+                           <value>-Xmx2048m -XX:MaxPermSize=512m -enableassertions -Djboss.modules.system.pkgs=com.yourkit -Dorg.jboss.testharness.api.ConfigurationBuilder=org.jboss.jsr299.tck.impl.JSR299PropertiesBasedConfigurationBuilder</value>
                         </property>
                      </systemProperties>
                   </configuration>
