--- a/pom.xml
+++ b/pom.xml
@@ -623,6 +623,8 @@
                 <module>environments/se/core</module>
                 <module>environments/se/build</module>
                 <module>environments/servlet</module>
+                <module>environments/osgi/build</module>
+                <module>environments/osgi/core</module>
             </modules>
         </profile>
         <profile>
@@ -676,5 +678,4 @@
             </pluginRepositories>
         </profile>
     </profiles>
-
 </project>
