--- a/pom.xml
+++ b/pom.xml
@@ -529,6 +529,15 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                       <source>1.6</source>
+                       <target>1.6</target>
+                    </configuration>
+                 </plugin>
             </plugins>
 
         </pluginManagement>
@@ -576,7 +585,7 @@
                 <module>tests-arquillian</module>
                 <module>inject-tck-runner</module>
                 <module>jboss-tck-runner</module>
-                <!--<module>environments/osgi/tests</module>-->
+                <module>environments/osgi/tests</module>
             </modules>
         </profile>
         <profile>
