Add documentations for Weld-OSGi

--- a/pom.xml
+++ b/pom.xml
@@ -608,6 +608,7 @@
             </activation>
             <modules>
                 <module>docs/reference</module>
+                <module>environments/osgi/docs</module>
             </modules>
         </profile>
         <profile>
